--- a/Personal Site/about.html
+++ b/Personal Site/about.html
@@ -7,20 +7,38 @@
     <link rel="stylesheet" href="personalsite.css">  
 </head>
 <body>
-    <nav class="navbar">
-      <ul class="navbar-links">
+  <nav class="navbar">
+    <!-- when I commented this out, my contact lined up with the other navbar links but I lost 
+    rest of the page? -->
+    <script src="site.js"></script>
+    
+    <ul class="navbar-links">
         <li><a href="./home.html">HOME</a></li>
         <li><a href="./about.html">ABOUT</a></li>
         <li><a href="./portfolio.html">PORTFOLIO</a></li>
-        <!-- <img src="./images/AM Prof Pic.jpeg" alt="Ashleigh's Profile Pic" class="nav-image"> -->
-      </ul>
-      
+        <li><a class="contact-button" onclick="openContactForm()">CONTACT</a></li>
+        <!-- Why is this not lining up with other links? -->
+    </ul>
 
-   
+    <div class="popup" id="contactPopup">
+        <span class="close" onclick="closeContactForm()">&times;</span>
+        <!-- &times gives user way to close out of popup without filling it out -->
+        <h2>Say Hi!</h2>
+        <form id="contactForm" action="success.html" method="post">
+            <label for="name">I'm Ashleigh! What's your name?</label><br>
+            <input type="text" id="name" name="name" required><br>
+            <label for="email">What's your email?</label><br>
+            <input type="email" id="email" name="email" required><br>
+            <label for="message">Talk to me!</label><br>
+            <textarea id="message" name="message" rows="4"></textarea><br>
+            <input type="submit" value="Submit">
+        </form>
+    </div>
     <div class="nav-image-container">
-        <img src="./images/AM Prof Pic.jpeg" alt="Ashleigh's Profile Pic" class="nav-image">
-      </div>
-    </nav>
+      <img src="/images/AM Prof Pic.jpeg" alt="Ashleigh's Profile Pic" class="nav-image">
+  </div>
+</nav>
+
 <div class="heading">
 <h1>What Makes Ashleigh Tick </h1>
 </div><!-- /good -->
@@ -113,9 +131,9 @@
 
   <footer class="footer">
     <ul class="social-links">
-      <li><a href="https://www.facebook.com"><img src="./images/facebook-icon.png" alt="Facebook"></a></li>
-      <li><a href="https://www.instagram.com"><img src="./images/insta-icon.jpeg" alt="Instagram"></a></li>
-      <li><a href="https://www.linkedin.com"><img src="./images/linkedin-icon.jpeg" alt="LinkedIn"></a></li>
+      <li><a href="https://www.facebook.com"><img src="/images/facebook-icon.png" alt="Facebook"></a></li>
+      <li><a href="https://www.instagram.com"><img src="/images/insta-icon.jpeg" alt="Instagram"></a></li>
+      <li><a href="https://www.linkedin.com"><img src="/images/linkedin-icon.jpeg" alt="LinkedIn"></a></li>
     </ul>
   </footer>
 
